--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
     "compilerOptions": {
         "target": "es5",
+        "lib": ["es6"],
         "module": "commonjs",
         "moduleResolution": "node",
-        "jsx": "react",
-        "noImplicitAny": false,
+        "noImplicitAny": true,
         "sourceMap": true, 
         "outDir":"./dist/"
     },
