--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,22 @@
 {
-    "compilerOptions": {
-        "target": "es5",
-        "lib": ["es6"],
-        "module": "commonjs",
-        "moduleResolution": "node",
-        "noImplicitAny": true,
-        "sourceMap": true, 
-        "outDir":"./dist/"
-    },
-    "include": [
-        "src/**/*"
+  "compilerOptions": {
+    "target": "es5",
+    "lib": [
+      "es6"
     ],
-    "exclude": [
-        "node_modules",
-        "**/*.spec.ts",
-        "**/*.test.ts"
-    ]
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "noImplicitAny": true,
+    "sourceMap": true,
+    "strict": true,
+    "outDir": "./dist/"
+  },
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts",
+    "**/*.test.ts"
+  ]
 }
