--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@leanmind/monads-ts",
-  "version": "0.0.0-development",
+  "version": "1.0.0",
   "description": "A collection of monads implemented in TypeScript using object-oriented programming.",
   "keywords": [
     "functional-programming",
