--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Node.js CI
+name: CI
 
 on:
   push:
@@ -19,6 +19,13 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-      - run: npm ci
-      - run: npm run build
-      - run: npm test
+      - name: CI Setup
+        run: npm ci
+      - name: Code Quality Checks
+        run: |
+          npm run lint
+          npm run format:check
+      - name: Build
+        run: npm run build
+      - name: Test
+        run: npm test
