--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,8 +19,16 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "lts/*"
-      - run: npm ci
-      - run: npm run build
+      - name: CI Setup
+        run: npm ci
+      - name: Code Quality Checks
+        run: |
+          npm run lint
+          npm run format:check
+      - name: Build
+        run: npm run build
+      - name: Test
+        run: npm test
       - run: npm audit signatures
       - name: Release
         env:
