--- a/package.json
+++ b/package.json
@@ -1,16 +1,8 @@
 {
   "name": "@leanmind/monads",
-  "type": "module",
-  "exports": {
-    "./either": {
-      "types": "./dist/either/index.d.ts",
-      "default": "./dist/either/index.js"
-    },
-    "./option": {
-      "types": "./dist/option/index.d.ts",
-      "default": "./dist/option/index.js"
-    }
-  },
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
   "version": "0.0.0-semantically-released",
   "description": "A collection of monads implemented in TypeScript using object-oriented programming.",
   "keywords": [
