--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "format:check": "npm run format -- --check",
     "format:fix": "npm run format -- --write",
     "test": "vitest run",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "prepare": "husky",
+    "commitlint": "commitlint --edit"
   },
   "author": "Lean Mind",
   "contributors": [
@@ -48,6 +50,8 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
     "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
@@ -55,7 +59,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-watch": "^8.0.0",
-    "husky": "^9.0.11",
+    "husky": "^9.1.6",
     "lint-staged": "^15.2.2",
     "npm-check-updates": "^16.14.18",
     "prettier": "^3.2.5",
