--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@leanmind/monads",
   "main": "dist/index.js",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "version": "0.0.0-semantically-released",
   "description": "A collection of monads implemented in TypeScript using object-oriented programming.",
