fix(package): update contributor name to include full name
Fake commit

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "author": "Lean Mind",
   "contributors": [
     {
-      "name": "Mario Pinto Miranda",
+      "name": "Mario Sebastián Pinto Miranda",
       "email": "mario.pinto.miranda@gmail.com",
       "url": "https://mario-pinto-miranda.dev"
     },
