--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,12 @@ name: CI
 on:
   push:
     branches: ["main", "beta"]
+    paths-ignore:
+      - 'docs/**'
   pull_request:
     branches: ["main", "beta"]
+    paths-ignore:
+      - 'docs/**'
 
 jobs:
   build:
