--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,3 +35,27 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npx semantic-release
+      # Sync (rebase) beta branch with the latest main changes
+      - name: Sync beta branch with main
+        if: github.ref == 'refs/heads/main'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config --global user.name "GitHub Actions Bot"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
+          # Ensure we have the latest changes from main and beta branches
+          git fetch origin main beta
+
+          # Configure remote URL to use the GitHub token for authentication
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+
+          echo "🔄 Rebasing beta branch with main"
+          if git checkout beta && git rebase origin/main; then
+            git push origin beta --force
+            echo "✅ Beta branch updated successfully"
+          else
+            echo "❌ Failed to update beta branch"
+            git rebase --abort || true
+            exit 1
+          fi
